src/main/openshift/deployment-config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: kafka-demo
spec:
  replicas: 1
  selector:
    name: kafka-demo
  template:
    metadata:
      labels:
        name: kafka-demo
    spec:
      containers:
        - image: quarkus-kafka-demo-native
          name: kafka-demo
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - kafka-demo
        from:
          kind: ImageStreamTag
          name: quarkus-kafka-demo-native:latest
      type: ImageChange
  strategy:
    type: Rolling
