src/main/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-demo
spec:
  selector:
    name: kafka-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
