src/main/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-demo
  annotations:
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains;preload
spec:
  host: kafka-demo.apps.ocp4.klaassen.click
  to:
    kind: Service
    name: kafka-demo
  tls:
    termination: "edge"
